Merge pull request #193
* feat: 노선 등록/목록/삭제 기능 구현

* feat: 노선 조회 기능 구현

* feat: 노선 수정 기능 구현

* feat: 중복된 노선/역 이름에 대한 예외처리

* fix: 중복된 이름에 대한 상태 코드 변경

* test: 테스트 메소드 실행 전에 Dao를 초기화하는 기능 추가

* test: 노선 기능에 대한 E2E 테스트

* refactor: jdbc 기반으로 전환

* refactor: jdbc 기반으로 전환

* refactor: jdbc 기반으로 전환

* refactor: 코드 구조 리팩토링

* Merge pull request #1 from woong7/step2

* feat: 구간 관련 로직 일부 추가

* Merge pull request #2 from woong7/step2

* fix: 테스트 오류 수정

* Merge pull request #3 from woong7/step2

* refactor: 코드 전체 리팩토링

* Merge pull request #4 from woong7/step2

* refactor: Lombok / Transaction / Bean Validation 적용

* refactor: 서비스 레이어 경량화

* refactor: 전체 리팩토링

* refactor: Sections 도메인 추가

* refactor: Lines / Stations 도메인 추가

* Merge pull request #5 from woong7/step2

* feat: 역 정렬 로직 추가

* fix: 재귀 오류 수정

* refactor: 정렬 로직 수정

* Merge pull request #6 from woong7/step2

* refactor: 피드백 반영

* Merge pull request #7 from woong7/step2

* test: Sections 테스트코드 추가

* refactor: Stations / Lines 일급 컬렉션 제거

* fix: 테스트 오류 수정

* Merge pull request #8 from woong7/step2